Date	Added

2008/04/02
	* Rev. 12462 Uncommented restricted map entryies for WoESE maps. [L0ne_W0lf]
2008/03/07
	* Added config settings mob_active_time and boss_active_time, what they do
	  is specify a duration during which monsters will keep running their active
	  AI after all players have left their vecinity. Their current defaults are
	  set to 0 (disabled). [Skotlex]
2008/02/29
	*Rev. 12273 Added some additional map flags for some newer maps. [L0ne_W0lf]
2008/02/27
	* Rev. 12268 Added information for cash related @ and # commands. [L0ne_W0lf]
2008/02/27
	* Disabled idle_no_autoloot setting (bugreport:1051)
2008/02/14
	* Removed atcommand @whozeny [ultramage]
2008/02/11
	* Added 'input_min_value' and 'input_max_value' to script_athena.conf. [FlavioJS]
2008/01/22
	* Removed hom_setting&02 (ignore skill range) as this was fixed by Gravity
	  some time ago. [Skotlex]
2008/01/13
	* Corrected job_knt Mapflags. (bugreport:803) [Samuray22]
2008/01/10
	* Removed 'skill_steal_type' from skill.conf as said config no longer
	  exists. [Skotlex]
2008/01/06
	* Added job_knt to nomemo, no return & noteleport mapflags. [Samuray22]
2007/11/27
	* Rev. 11824 Added Battle field and Memorial dungeon maps. [L0ne_W0lf]
2007/11/18
	* 11758 Updated more map flags for Al De Baran's turbo Track. [L0ne_W0lf]
2007/11/12
	* hom_setting&0x2 now disables skill range checks for homunculus. [Skotlex]
2007/11/08
	* Removed the unneccessary @refreshonline command
2007/10/29
	* Removed petid command (not needed because commands understand names)
	* Removed *id2 commands (messy, useless and redundant)
	* Added missing @misceffect, @feelreset and #dropall/#storeall setting
	* AGAIN added conf entries for @whozeny, @kamic, @tonpc, @identify,
	  @adopt, @trade, @changelook, @send, @displayskill
	* Reverted atcommand conf (alphabetically-sorted = failure) [ultramage]

2007/10/26
	* Removed the config setting firewall_hits_on_undead setting. The code